# BookSage-AI

./: .flake8  .gitignore  Dockerfile  PROJECT_REPORT.md  README.md  docker-compose.yml  main.py  pyproject.toml  render.yml  requirements.txt  run.py  setup.py  train_models.py
.github/workflows/: main.yml
app/: config.py  data_loader.py  main.py  recommender.py  utils.py
app/BookSageAI.egg-info/: PKG-INFO  SOURCES.txt
app/core/: config.py  logger.py
app/services/: content_model.py  data_preprocessor.py  hybrid_model.py  model_manager.py  recommendation_engine.py
backend/: pyproject.toml  setup.py
backend/app/: __init__.py  main.py  train_models.py
backend/app/core/: config.py  models.py
backend/app/models/: tfidf_vectorizer.pkl
backend/app/services/: collaborative_model.py  data_loader.py  recommendation_engine.py
backend/tests/: test_content_model.py  test_data_preprocessor.py  test_endpoints.py  test_models.py  test_recommendation_engine.py
docs/: phase-2-localization-remix-plan.md
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
jupyter/: experiment.ipynb
main/: main.py
models/: tfidf_vectorizer.pkl
notebooks/: experiment.ipynb
src/: data_loader.py  logger.py  recommender.py  utils.py
templates/: index.html  recommendations.html
tests/: conftest.py  test_collaborative_model.py  test_config.py  test_data_loader.py  test_endpoints.py  test_hybrid_model.py  test_logger.py  test_model_manager.py  test_recommendation_engine.py
(+24 files in other folders)
